--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Dev-intensive</string>
     <string name="bender_image_description">bender image</string>
+    <string name="enter_text_hint">Введите текст</string>
+    <string name="send_button_description">send button</string>
 </resources>
